# rsync-studio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  release-please-config.json
crates/rsync-core/: Cargo.toml
crates/rsync-core/src/: error.rs  lib.rs
crates/rsync-core/src/database/: sqlite.rs
crates/rsync-core/src/file_system/: mod.rs  real_file_system.rs
crates/rsync-core/src/implementations/: database.rs  mod.rs  process_rsync_client.rs  real_file_system.rs  sqlite_invocation_repository.rs  sqlite_job_repository.rs  sqlite_settings_repository.rs  sqlite_snapshot_repository.rs  sqlite_statistics_repository.rs
crates/rsync-core/src/migrations/: v001_initial.sql  v002_run_statistics.sql
crates/rsync-core/src/models/: backup.rs  command.rs  job.rs  mod.rs  progress.rs  rsync_options.rs  schedule.rs  scrubber.rs  settings.rs  statistics.rs  validation.rs
crates/rsync-core/src/repository/: invocation.rs  mod.rs  settings.rs  statistics.rs
crates/rsync-core/src/rsync_client/: mod.rs  process_rsync_client.rs
crates/rsync-core/src/services/: command_builder.rs  command_explainer.rs  command_parser.rs  execution_handler.rs  export_import.rs  history_retention.rs  itemize_parser.rs  job_executor.rs  job_runner.rs  job_service.rs  log_scrubber.rs  mod.rs  preflight.rs  progress_parser.rs  retention_runner.rs  scheduler.rs  scheduler_backend.rs  settings_service.rs  statistics_service.rs
crates/rsync-core/src/tests/: itemize_parser_tests.rs  job_service_integration_tests.rs  mod.rs  progress_statistics_tests.rs  retention_runner_tests.rs  settings_service_tests.rs  sqlite_invocation_repository_tests.rs  sqlite_job_repository_tests.rs  sqlite_settings_repository_tests.rs  sqlite_snapshot_repository_tests.rs  sqlite_statistics_repository_tests.rs  statistics_service_tests.rs  test_file_system.rs  test_file_system_tests.rs  test_helpers.rs  test_rsync_client.rs  test_rsync_client_tests.rs
crates/rsync-core/src/traits/: file_system.rs  invocation_repository.rs  job_repository.rs  mod.rs  rsync_client.rs  snapshot_repository.rs
crates/rsync-tui/: Cargo.toml
crates/rsync-tui/src/: app.rs  event.rs  main.rs
crates/rsync-tui/src/ui/: about.rs  history.rs  job_form.rs  job_output.rs  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_icon.py  icon.icns
src-tauri/src/: commands.rs  execution.rs  lib.rs  main.rs  state.rs
(+156 files in other folders)
