[package]
name = "rsync-gui"
version = "0.1.0"
description = "A cross-platform desktop GUI for rsync"
authors = []
edition = "2021"

[lib]
name = "rsync_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rsync-core = { path = "../crates/rsync-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
