[package]
name = "rsync-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
regex = "1"
shell-words = "1"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
croner = "3"

[dev-dependencies]
tempfile = "3"
