[package]
name = "rsync-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsync-tui"
path = "src/main.rs"

[dependencies]
rsync-core = { path = "../rsync-core" }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
dirs = "5"
